--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html,body{
 #bg{
     height: 100%;
     width: 100%;
-    background-image: url(/hanging\ tree.webp);
+    background-image: url(/2291382.webp);
     background-size: cover;
 }
 
